--- a/resources/views/components/consent-banner.antlers.html
+++ b/resources/views/components/consent-banner.antlers.html
@@ -73,12 +73,12 @@
                             </div>
                             <div class="relative">
                                 <button type="button" x-on:click="toggleGeolocation" role="switch"
-                                    :aria-checked="settings.geolocation"
-                                    class="relative inline-flex h-6 w-11 items-center rounded-full"
-                                    :class="settings.geolocation ? 'bg-blue-600' : 'bg-gray-200 dark:bg-gray-700'">
+                                    :aria-checked="settings.geolocation" class="relative inline-flex">
+                                    <input type="checkbox" x-model="settings.geolocation" class="sr-only peer">
+                                    <div
+                                        class="w-11 h-6 bg-gray-200 border border-gray-300 rounded-full peer dark:bg-gray-700 dark:border-gray-600 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-blue-600 peer-checked:border-blue-600">
+                                    </div>
                                     <span class="sr-only">Enable geolocation tracking</span>
-                                    <span class="inline-block h-5 w-5 transform rounded-full bg-white transition"
-                                        :class="settings.geolocation ? 'translate-x-6' : 'translate-x-1'"></span>
                                 </button>
                             </div>
                         </div>
